sizes fixed on mobile

--- a/style.css
+++ b/style.css
@@ -257,12 +257,12 @@ body {
     }
 
     .popup-content h4 {
-        font-size: 10px !important;
+        font-size: 13px !important;
         margin-bottom: 6px !important;
     }
 
     .popup-content p {
-        font-size: 8px !important;
+        font-size: 10px !important;
         line-height: 1.6 !important;
         margin: 4px 0 !important;
     }
